Add demo automation to demo pack

--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -146,7 +146,7 @@ jobs:
                 [ -e "$pack" ] || { echo "No artifacts found to upload in $NEW_PACKS_FOLDER"; exit 0; }
                 echo "Uploading: $pack"
                 ls -lh "$pack" || true
-                yes y | poetry run demisto-sdk upload --input "$pack"
+                poetry run demisto-sdk upload --input "$pack" --override-existing
             else
               echo "The current branch is not the default branch, skipping upload to server."
             fi
